--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <script src="assets/js/common.js"></script>
   </head>
 
-  <body class="top">
+  <body>
     <div id="pagetop"></div>
     <span class="to-top"> &#8679; </span>
-    <header>
+    <header class="top-header">
       <nav class="container">
         <div class="navbar">
           <div class="nav-logo">
@@ -47,6 +47,9 @@
             <ul>
               <li>
                 <a href="./index.html">ホーム</a>
+              </li>
+              <li>
+                <a href="./message/index.html">私たちの想い</a>
               </li>
               <li>
                 <a href="./about/index.html">橋本農場</a>
@@ -69,6 +72,7 @@
                 </a>
               </li>
             </ul>
+            <div></div>
           </div>
           <div class="ham-btn">
             <span class="bar1"></span>
@@ -81,7 +85,6 @@
 
     <main>
       <section class="top-main-wrapper" id="top">
-        <!-- <div class="top-main"></div> -->
         <ul class="top-main-slideshow">
           <li>
             <span>
@@ -90,12 +93,12 @@
           </li>
           <li>
             <span>
-              <img src="./assets/img/index/main/pic--02.jpg" alt="苗2" />
+              <img src="./assets/img/index/main/pic--02.jpg" alt="苗3" />
             </span>
           </li>
           <li>
             <span>
-              <img src="./assets/img/index/main/pic--012.jpg" alt="苗3" />
+              <img src="./assets/img/index/main/pic--03.jpg" alt="苗2" />
             </span>
           </li>
         </ul>
@@ -137,30 +140,30 @@
 
       <section class="top-message" id="message">
         <div class="container">
-          <h2 class="section-main-title">私たちの想い</h2>
+          <h2 class="top-secmain-title">私たちの想い</h2>
           <div class="section-title animation">
             <p class="section-subtitle1">OUR MESSAGE</p>
             <p class="section-subtitle2">
               ちゃんと美味しいお米を<br />皆さまに
             </p>
           </div>
-          <div class="gridthree-row animation">
-            <div class="gridthree-col">
+          <div class="top-msg-row animation">
+            <div class="top-msg-col">
               <img
-                src="./assets/img/index/message/message-bg01.jpg"
-                alt="message-bg01"
+                src="./assets/img/index/message/message-bg04.jpg"
+                alt="message-bg03"
               />
             </div>
-            <div class="gridthree-col">
+            <div class="top-msg-col">
               <img
                 src="./assets/img/index/message/message-bg02.jpg"
                 alt="message-bg02"
               />
             </div>
-            <div class="gridthree-col">
+            <div class="top-msg-col">
               <img
-                src="./assets/img/index/message/message-bg03.jpg"
-                alt="message-bg03"
+                src="./assets/img/index/message/message-bg01.jpg"
+                alt="message-bg01"
               />
             </div>
           </div>
@@ -177,7 +180,7 @@
 
       <section id="top-making" class="top-making" id="making">
         <div class="container">
-          <h2 class="section-main-title">お米を作る工程</h2>
+          <h2 class="top-secmain-title">お米を作る工程</h2>
           <div class="row">
             <div class="top-making-content">
               <div class="section-title">
@@ -758,7 +761,7 @@
 
       <section class="top-about" id="about">
         <div class="container">
-          <h2 class="section-main-title">橋本農場</h2>
+          <h2 class="top-secmain-title">橋本農場</h2>
           <div class="top-about-content">
             <div class="gridhalf-row">
               <div class="gridhalf-col animation">
@@ -796,7 +799,7 @@
 
       <section class="top-shop" id="shopping">
         <div class="container">
-          <h2 class="section-main-title">お届けする商品</h2>
+          <h2 class="top-secmain-title">お届けする商品</h2>
           <div class="top-shop-list mb-lg animation">
             <img
               src="assets/img/index/shopping/pic--01.png"
@@ -828,7 +831,7 @@
 
       <section class="top-instagram">
         <div class="container">
-          <h2 class="section-main-title">インスタ（ニュースなど）</h2>
+          <h2 class="top-secmain-title">インスタ（ニュースなど）</h2>
           <div class="top-instagram-inner">
             <div id="top-instagram"></div>
             <div class="text-center animation">
@@ -872,6 +875,9 @@
             <ul>
               <li>
                 <a href="./index.html">ホーム</a>
+              </li>
+              <li>
+                <a href="./message/index.html">私たちの想い</a>
               </li>
               <li>
                 <a href="./about/index.html">橋本農場</a>
