--- a/message/index.html
+++ b/message/index.html
@@ -2,142 +2,288 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-W9XWR8B");
-    </script>
-    <title>
-      私たちの想い｜お米の通販農家直送のお取り寄せ｜久保さんちのお米
-    </title>
+    <title>私たちの想い｜ちゃんと美味しいお米を皆さまに｜橋本農場のお米</title>
     <meta name="keywords" content="米,取り寄せ,おいしいお米,無農薬,定期便" />
     <meta
       name="description"
       content="九州大分県宇佐市の農家直送「久保さんちのお米」。「自分の子ども達に食べさせるお米を皆様に」をコンセプトに家族4人で心を込めて美味しく安心・安全なお米を作りお届けします。"
     />
     <link rel="icon" type="image/vnd.microsoft.icon" href="../favicon.ico" />
-    <script src="../assets/js/jquery-1.11.1.min.js"></script>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     />
-    <script src="../assets/js/jquery.easing.js"></script>
-    <script src="../assets/js/jquery.smoothScroll.js"></script>
-    <script src="../assets/js/common.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../oru5dte.css" />
-    <script type="text/javascript">
-      var ua = navigator.userAgent;
-      if (
-        ua.indexOf("iPad") > 0 ||
-        (ua.indexOf("Android") > 0 && ua.indexOf("Mobile") < 0)
-      ) {
-        document.write(
-          '<meta name="viewport" content="width=1200,user-scalable=no">'
-        );
-      }
-    </script>
     <link rel="stylesheet" href="../assets/css/common.css" />
     <link rel="stylesheet" href="../assets/css/page.css" />
+    <link rel="stylesheet" href="../assets/js/slick-1.6.0/slick.css" />
+    <link rel="stylesheet" href="../assets/js/slick-1.6.0/slick-theme.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css"
+    />
+    <script src="../assets/js/jquery-1.11.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+    <script src="../assets/js/slick-1.6.0/slick.min.js"></script>
+    <script src="../assets/js/jquery.easing.js"></script>
+    <script src="../assets/js/jquery.smoothScroll.js"></script>
+    <script src="../assets/js/common.js"></script>
   </head>
 
-  <body class="">
+  <body>
     <div id="pagetop"></div>
-    <main role="main" class="">
-      <section class="container page-message">
-        <div class="catch">
-          <div class="catch__en">OUR MESSAGE</div>
-          <h1 class="catch__jp">私たちの想い</h1>
-        </div>
-        <section class="page-lead">
-          <h2 class="page-lead__title">
-            ちゃんと美味しい<br class="br-sp" />お米を皆さまに
-          </h2>
-          <p class="page-lead__content">
-            ⼀般に流通している多くのお⽶は、 同じ品種を栽培する地域の⽣産者から集められ、 さまざまな⼿法で作られたお⽶が混ぜられてしまいます。 <br /><br />
-            そして残念ながら、古いお⽶も少し混ぜられてしまいます。 
-          </p>
-        </section>
-        <div class="message-section01"></div>
-        <div class="message-section02">
-          <div class="message-section02__content">
-            <p>
-              ⾃分たちの⽬が届くお⽶を作ろう。<br />
-              少量⽣産だからこそこだわれる。 <br />
-              家族経営だからこそ<br />
-              すべての⼯程に⽬が届く。
-            </p>
-            <p>
-              基準は、⾃分の⼦ども達に⾃信をもって<br />
-              ⾷べさせたいと思えるか。
-            </p>
+    <span class="to-top"> &#8679; </span>
+    <header class="page-header">
+      <nav class="container">
+        <div class="navbar">
+          <div class="nav-logo">
+            <a href="./index.html">
+              <img
+                src="../assets/img/common/header/logo.svg"
+                width="120"
+                alt="logo"
+              />
+            </a>
           </div>
-          <img
-            src="../assets/img/message/section02/pic--01.png"
-            alt=""
-            class="animation-pic pic01 animation"
-          />
+          <div class="menu-list">
+            <ul>
+              <li>
+                <a href="../index.html">ホーム</a>
+              </li>
+              <li>
+                <a href="../message/index.html">私たちの想い</a>
+              </li>
+              <li>
+                <a href="../about/index.html">橋本農場</a>
+              </li>
+              <li>
+                <a href="../index.html#top-making">お米を作る工程</a>
+              </li>
+              <li>
+                <a href="../shopping/index.html">お届けする商品</a>
+              </li>
+              <li>
+                <a href="../contact/index.html">お問い合わせ</a>
+              </li>
+              <li>
+                <a href="../contact/index.html" class="btn-outline">
+                  <span>
+                    <span> お問い合わせ </span>
+                    <span></span>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="ham-btn">
+            <span class="bar1"></span>
+            <span class="bar2"></span>
+            <span class="bar3"></span>
+          </div>
         </div>
-        <div class="message-section03">
-          <div class="message-section03__content">
-            種まきから保管⽅法までこだわり、種や倉庫にさえ農薬を散布しない。 <br />
-            ⾯倒をいとわないのは、⾃分たちが愛せるお⽶を育てたいから。 <br />
-            今⽇も苗を⼿に取り、稲穂を⽬で⾒て、実りを確かめる。 <br />
+      </nav>
+    </header>
+    <main class="message-page">
+      <section class="page-main">
+        <div class="container">
+          <div class="page-main-titles">
+            <div class="page-main-en">OUR MESSAGE</div>
+            <h1 class="page-main-jp">私たちの想い</h1>
+          </div>
+          <div class="bgoverlay msg-bgoverlay"></div>
+        </div>
+      </section>
+      <section class="page-desc page-section animation">
+        <div class="container">
+          <h2 class="section-subtitle3">ちゃんと美味しいお米を皆さまに</h2>
+          <p class="section-content">
+            近年生産者の顔が見えるという事が大事になってきました。
             <br />
-            秋、届いた⼈から幸せの声が返ってくると、 <br class="u-br-notsp" />
-            また来年へ向けてお⽶づくりの決意を新たにします。
+            作って終わり。そんな時代は終わりました。
+            <br />
+            消費者へ直接お米を届けるというのは作る側、食べる側にとって安心と信頼に繋がります。 
+          </p>
+          <div class="mask-wrapper relative">
+            <div>
+              <div class="mask type1"></div>
+            </div>
+            <div>
+              <div class="mask type2"></div>
+            </div>
+            <div>
+              <div class="mask type3"></div>
+            </div>
           </div>
-          <img
-            src="../assets/img/message/section03/pic--01.png"
-            alt=""
-            class="animation-pic pic01 animation"
-          />
         </div>
-        <section class="message-section04">
-          <h2 class="message-section04__title">私たちの想い</h2>
-          <div class="message-section04__content">
-            あたり前にできることを、<br
-              class="br-sp"
-            />また、あたり前にやろう。 <br />
-            その積み重ねだけが、<br
-              class="br-sp"
-            />おいしいお⽶づくりへの道なのだから。
+      </section>
+      <section class="message-section01 page-section animation">
+        <div class="container">
+          <div class="section-content">
+            種から育て、植え、草刈り、害虫駆除など成長を見守り、大きく育ち実った稲を収穫
+            <br />
+            1年に一度の想いを込めたお米
           </div>
-          <img
-            src="../assets/img/message/section04/pic--01.png"
-            alt=""
-            class="animation-pic pic01 animation"
-          />
-        </section>
+        </div>
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img
+                src="../assets/img/message/section1/msg-swiper-img01.png"
+                alt=""
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../assets/img/message/section1/msg-swiper-img02.jpg"
+                alt="msg-swiper-img02"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../assets/img/message/section1/msg-swiper-img03.jpg"
+                alt=""
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../assets/img/message/section1/msg-swiper-img04.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../assets/img/message/section1/msg-swiper-img05.jpg"
+                alt="msg-swiper-img05"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../assets/img/message/section1/msg-swiper-img06.jpg"
+                alt="msg-swiper-img06"
+              />
+            </div>
+          </div>
+          <!-- <div class="swiper-pagination"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div> -->
+        </div>
+      </section>
+      <section class="message-section02 bg-primary page-section animation">
+        <div class="container">
+          <p class="section-content">
+            当たり前の工程、当たり前にあるお米
+            <br />
+            しかしなんでも良いではなく、橋本農場のお米が良いと言ってもらうため
+            <br />
+            おいしいお米を食べてもらうために頑張っています。
+          </p>
+          <div class="gridthreetwo-row">
+            <div class="col">
+              <img
+                src="../assets/img/message/section2/msg-section2-bg01.jpeg"
+                alt="msg-section2-bg01"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="../assets/img/message/section2/msg-section2-bg02.jpg"
+                alt="msg-section2-bg02"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="../assets/img/message/section2/msg-section2-bg03.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="col">
+              <img
+                src="../assets/img/message/section2/msg-section2-bg04.jpeg"
+                alt="msg-section2-bg04"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="../assets/img/message/section2/msg-section2-bg05.jpeg"
+                alt="msg-section2-bg05"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="../assets/img/message/section2/msg-section2-bg06.jpeg"
+                alt="msg-section2-bg06"
+              />
+            </div>
+          </div>
+        </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-contact row">
-          <div class="col">
-            <h2 class="section-subtitle1">SNS ACCOUNT</h2>
-            <p class="u-font-size--large u-font-bold">
-              日々の我が家のお米づくりを<br class="br-sp" />発信しています。
-            </p>
+    <footer>
+      <div class="footer-content">
+        <div class="container">
+          <section class="footer-contact">
+            <div class="contact-logo">
+              <img
+                src="../assets/img/common/header/logo-white.svg"
+                alt="logo"
+              />
+            </div>
+            <div class="contact-content">
+              <p>(有) 橋本農場</p>
+              <p>
+                〒943-0186 <br class="br-sp" />新潟県上越市大字市野江353番地1
+              </p>
+              <p>025-523-7139</p>
+              <a href="./contact/index.html" class="btn-outline mb-sm">
+                <span>
+                  <span> お問い合わせはこちら </span>
+                  <span></span>
+                </span>
+              </a>
+            </div>
+          </section>
+          <section class="menu-list">
+            <ul>
+              <li>
+                <a href="../index.html">ホーム</a>
+              </li>
+              <li>
+                <a href="../message/index.html">私たちの想い</a>
+              </li>
+              <li>
+                <a href="../about/index.html">橋本農場</a>
+              </li>
+              <li>
+                <a href="../index.html#top-making">お米を作る工程</a>
+              </li>
+              <li>
+                <a href="../shopping/index.html">お届けする商品</a>
+              </li>
+              <li>
+                <a href="../contact/index.html">お問い合わせ</a>
+              </li>
+              <li>
+                <a href="../contact/index.html" class="btn-outline">
+                  <span>
+                    <span> お問い合わせ </span>
+                    <span></span>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer-sns-section">
             <ul class="footer-sns-list">
               <li>
                 <a
                   href="https://www.instagram.com/hashimoto.farming/"
                   target="_blank"
                   ><img
-                    src="../assets/img/common/footer/sns/ico--instagram.svg"
+                    src="../assets/img/common/footer/sns/icon-instagram-white.png"
+                    width="30"
                     alt="instagram"
                 /></a>
               </li>
@@ -146,40 +292,16 @@
                   href="https://www.facebook.com/hashimoto.farming"
                   target="_blank"
                   ><img
-                    src="../assets/img/common/footer/sns/ico--fb.svg"
+                    src="../assets/img/common/footer/sns/icon-fb-white.png"
+                    width="30"
                     alt="facebook"
                 /></a>
               </li>
             </ul>
-          </div>
-          <div class="col">
-            <h2 class="section-subtitle1">CONTACT</h2>
-            <a href="tel:025-523-7139" class="footer-contact__tel"
-              >025-523-7139</a
-            >
-            <p class="u-margin-bottom u-font-bold">
-              受付時間：10:00〜18:00(不定休)
-            </p>
-            <p class="footer-contact__address u-font-bold">
-              〒943-0186 <br class="br-sp" />新潟県上越市大字市野江353番地1
-            </p>
-            <a href="" class="btn-outline u-margin-bottom--small"
-              >お問い合わせはこちら<img
-                src="../assets/img/common/btn/ico-btn-arrow-primary.svg"
-                alt=""
-            /></a>
-            <div class="u-textalign-center">
-              <a href=""><u>プライバシーポリシー</u></a>
-            </div>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <img
-            src="../assets/img/common/footer/log--sitename.png"
-            alt="久保さんちのお米"
-            class="footer-logo"
-          />
-          <small class="copy">&copy; 2024 HASHIMOTO farming</small>
+          </section>
+          <section class="copyright">
+            <small>©2024 HASHIMOTO farming</small>
+          </section>
         </div>
       </div>
     </footer>
