--- a/contact/index.html
+++ b/contact/index.html
@@ -2,88 +2,74 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-W9XWR8B");
-    </script>
-    <title>
-      お問い合わせ｜お米の通販農家直送のお取り寄せ｜久保さんちのお米
-    </title>
-    <meta
-      name="keywords"
-      content="米,取り寄せ,おいしいお米,無農薬,定期便,お問い合わせ"
-    />
+    <title>お問い合わせ｜ちゃんと美味しいお米を皆さまに｜橋本農場のお米</title>
+    <meta name="keywords" content="米,取り寄せ,おいしいお米,無農薬,定期便" />
     <meta
       name="description"
-      content="九州大分県宇佐市の農家直送「久保さんちのお米」へのお問合せはこちらから"
+      content="九州大分県宇佐市の農家直送「久保さんちのお米」。「自分の子ども達に食べさせるお米を皆様に」をコンセプトに家族4人で心を込めて美味しく安心・安全なお米を作りお届けします。"
     />
     <link rel="icon" type="image/vnd.microsoft.icon" href="../favicon.ico" />
-    <script src="../assets/js/jquery-1.11.1.min.js"></script>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     />
-    <script src="../assets/js/jquery.easing.js"></script>
-    <script src="../assets/js/jquery.smoothScroll.js"></script>
-    <script src="../assets/js/common.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../oru5dte.css" />
-    <script type="text/javascript">
-      var ua = navigator.userAgent;
-      if (
-        ua.indexOf("iPad") > 0 ||
-        (ua.indexOf("Android") > 0 && ua.indexOf("Mobile") < 0)
-      ) {
-        document.write(
-          '<meta name="viewport" content="width=1200,user-scalable=no">'
-        );
-      }
-    </script>
     <link rel="stylesheet" href="../assets/css/common.css" />
     <link rel="stylesheet" href="../assets/css/page.css" />
+    <link rel="stylesheet" href="../assets/js/slick-1.6.0/slick.css" />
+    <link rel="stylesheet" href="../assets/js/slick-1.6.0/slick-theme.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css"
+    />
+    <script src="../assets/js/jquery-1.11.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+    <script src="../assets/js/slick-1.6.0/slick.min.js"></script>
+    <script src="../assets/js/jquery.easing.js"></script>
+    <script src="../assets/js/jquery.smoothScroll.js"></script>
+    <script src="../assets/js/common.js"></script>
   </head>
 
-  <body class="">
+  <body>
     <div id="pagetop"></div>
     <span class="to-top"> &#8679; </span>
-    <header>
+    <header class="page-header">
       <nav class="container">
         <div class="navbar">
           <div class="nav-logo">
-            <a href="./index.html"> 橋本農場 </a>
+            <a href="./index.html">
+              <img
+                src="../assets/img/common/header/logo.svg"
+                width="120"
+                alt="logo"
+              />
+            </a>
           </div>
           <div class="menu-list">
             <ul>
               <li>
-                <a href="./index.html">ホーム</a>
+                <a href="../index.html">ホーム</a>
               </li>
               <li>
-                <a href="./about/index.html">橋本農場</a>
+                <a href="../message/index.html">私たちの想い</a>
               </li>
               <li>
-                <a href="#top-making">お米を作る工程</a>
+                <a href="../about/index.html">橋本農場</a>
               </li>
               <li>
-                <a href="./shopping/index.html">お届けする商品</a>
+                <a href="../index.html#top-making">お米を作る工程</a>
               </li>
               <li>
-                <a href="./contact/index.html">お問い合わせ</a>
+                <a href="../shopping/index.html">お届けする商品</a>
               </li>
               <li>
-                <a href="./contact/index.html" class="btn-outline">
+                <a href="../contact/index.html">お問い合わせ</a>
+              </li>
+              <li>
+                <a href="../contact/index.html" class="btn-outline">
                   <span>
                     <span> お問い合わせ </span>
                     <span></span>
@@ -100,227 +86,111 @@
         </div>
       </nav>
     </header>
-    <main class="">
-      <div class="page-contact">
-        <section class="catch">
-          <div class="container">
-            <div class="catch__en">CONTACT</div>
-            <h1 class="catch__jp">お問い合わせ</h1>
-          </div>
-        </section>
-        <section class="page-lead">
-          <div class="container">
-            <div class="page-lead__content">
-              お米についてのご相談、<br
-                class="br-sp"
-              />ご購入についてのご連絡は<br />
-              下記フォームまたはお電話にて<br
-                class="br-sp"
-              />お気軽にお問い合わせください。
-              <a href="tel:0978-32-4831" class="tel"
-                ><img
-                  src="../assets/img/common/ico/ico--tel.svg"
-                  alt=""
-                />0978-32-4831</a
-              >
-              受付時間：10:00〜18:00(不定休)
-            </div>
-          </div>
-        </section>
-        <section class="contact-section">
-          <div class="contai">
-            <div id="wufoo-mlenslb04p1r5y">
-              Fill out my
-              <a href="https://lplanning.wufoo.com/forms/mlenslb04p1r5y"
-                >online form</a
-              >.
-            </div>
-            <script type="text/javascript">
-              var mlenslb04p1r5y;
-              (function (d, t) {
-                var s = d.createElement(t),
-                  options = {
-                    userName: "lplanning",
-                    formHash: "mlenslb04p1r5y",
-                    autoResize: true,
-                    height: "572",
-                    async: true,
-                    host: "wufoo.com",
-                    header: "show",
-                    ssl: true,
-                  };
-                s.src =
-                  ("https:" == d.location.protocol ? "https://" : "http://") +
-                  "secure.wufoo.com/scripts/embed/form.js";
-                s.onload = s.onreadystatechange = function () {
-                  var rs = this.readyState;
-                  if (rs) if (rs != "complete") if (rs != "loaded") return;
-                  try {
-                    mlenslb04p1r5y = new WufooForm();
-                    mlenslb04p1r5y.initialize(options);
-                    mlenslb04p1r5y.display();
-                  } catch (e) {}
-                };
-                var scr = d.getElementsByTagName(t)[0],
-                  par = scr.parentNode;
-                par.insertBefore(s, scr);
-              })(document, "script");
-            </script>
-          </div>
-        </section>
-        <section class="section-others">
-          <div class="container">
-            <h2 class="section-others__title">OTHER CONTENTS</h2>
-            <ul class="section-others__list">
-              <li>
-                <a href="../place/index.html" class="section-others__item">
-                  <img
-                    src="../assets/img/common/others/pic--01.jpg"
-                    alt=""
-                    class="section-others__image"
-                  />
-                  <div class="section-others__txt">お米が育つ場所</div>
-                </a>
-              </li>
-              <li>
-                <a href="../about/index.html" class="section-others__item">
-                  <img
-                    src="../assets/img/common/others/pic--02.jpg"
-                    alt=""
-                    class="section-others__image"
-                  />
-                  <div class="section-others__txt">久保さんち</div>
-                </a>
-              </li>
-              <li>
-                <a href="../feature/index.html" class="section-others__item">
-                  <img
-                    src="../assets/img/common/others/pic--03.jpg"
-                    alt=""
-                    class="section-others__image"
-                  />
-                  <div class="section-others__txt">違いを作るお米育て</div>
-                </a>
-              </li>
-              <li>
-                <a href="../delivery/index.html" class="section-others__item">
-                  <img
-                    src="../assets/img/common/others/pic--04.jpg"
-                    alt=""
-                    class="section-others__image"
-                  />
-                  <div class="section-others__txt">こんなお届けできます</div>
-                </a>
-              </li>
-              <li>
-                <a href="../cook/index.html" class="section-others__item">
-                  <img
-                    src="../assets/img/common/others/pic--05.jpg"
-                    alt=""
-                    class="section-others__image"
-                  />
-                  <div class="section-others__txt">どんな炊飯器でも</div>
-                </a>
-              </li>
-              <li>
-                <a href="../safety/index.html" class="section-others__item">
-                  <img
-                    src="../assets/img/common/others/pic--06.jpg"
-                    alt=""
-                    class="section-others__image"
-                  />
-                  <div class="section-others__txt">安全・安心のために</div>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
-    </main>
-
-    <footer class="footer">
-      <section class="footer-contact">
+    <main class="message-page">
+      <section class="page-main">
         <div class="container">
-          <h2 class="section-main-title">お問い合わせ</h2>
-          <div class="row">
-            <div class="col">
-              <h3 class="section-subtitle1">SNS ACCOUNT</h3>
-              <p class="font-large font-bold text-left">
-                日々の我が家のお米づくりを発信しています。
-              </p>
-              <ul class="footer-sns-list">
-                <li>
-                  <a
-                    href="https://www.instagram.com/hashimoto.farming/"
-                    target="_blank"
-                    ><img
-                      src="assets/img/common/footer/sns/ico--instagram.svg"
-                      alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a
-                    href="https://www.facebook.com/hashimoto.farming"
-                    target="_blank"
-                    ><img
-                      src="assets/img/common/footer/sns/ico--fb.svg"
-                      alt="facebook"
-                  /></a>
-                </li>
-              </ul>
+          <div class="page-main-titles">
+            <div class="page-main-en">CONTACT</div>
+            <h1 class="page-main-jp">お問い合わせ</h1>
+          </div>
+          <div class="bgoverlay contact-bgoverlay"></div>
+        </div>
+      </section>
+      <section class="contact-info page-section animation">
+        <p class="section-content">
+          お米についてのご相談、ご購入についてのご連絡は
+          <br />
+          下記フォームまたはお電話にてお気軽にお問い合わせください。
+        </p>
+        <div class="contact-tel">
+          <img src="../assets/img/common/ico/ico--tel.svg" width="50" alt="" />
+          <p>0978-32-4831</p>
+        </div>
+        <p class="section-content">受付時間：10:00〜18:00(不定休)</p>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-content">
+        <div class="container">
+          <section class="footer-contact">
+            <div class="contact-logo">
+              <img
+                src="../assets/img/common/header/logo-white.svg"
+                alt="logo"
+              />
             </div>
-            <div class="col">
-              <h3 class="section-subtitle1">CONTACT</h3>
-              <a href="tel:025-523-7139" class="footer-contact__tel"
-                >025-523-7139</a
-              >
-              <p class="mb-mainfont-bold">受付時間：10:00〜18:00(不定休)</p>
-              <p class="footer-contact__address font-bold">
+            <div class="contact-content">
+              <p>(有) 橋本農場</p>
+              <p>
                 〒943-0186 <br class="br-sp" />新潟県上越市大字市野江353番地1
               </p>
+              <p>025-523-7139</p>
               <a href="./contact/index.html" class="btn-outline mb-sm">
                 <span>
                   <span> お問い合わせはこちら </span>
                   <span></span>
                 </span>
               </a>
-              <div class="text-center">
-                <a href=""><u>プライバシーポリシー</u></a>
-              </div>
             </div>
-          </div>
+          </section>
+          <section class="menu-list">
+            <ul>
+              <li>
+                <a href="../index.html">ホーム</a>
+              </li>
+              <li>
+                <a href="../message/index.html">私たちの想い</a>
+              </li>
+              <li>
+                <a href="../about/index.html">橋本農場</a>
+              </li>
+              <li>
+                <a href="../index.html#top-making">お米を作る工程</a>
+              </li>
+              <li>
+                <a href="../shopping/index.html">お届けする商品</a>
+              </li>
+              <li>
+                <a href="../contact/index.html">お問い合わせ</a>
+              </li>
+              <li>
+                <a href="../contact/index.html" class="btn-outline">
+                  <span>
+                    <span> お問い合わせ </span>
+                    <span></span>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer-sns-section">
+            <ul class="footer-sns-list">
+              <li>
+                <a
+                  href="https://www.instagram.com/hashimoto.farming/"
+                  target="_blank"
+                  ><img
+                    src="../assets/img/common/footer/sns/icon-instagram-white.png"
+                    width="30"
+                    alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.facebook.com/hashimoto.farming"
+                  target="_blank"
+                  ><img
+                    src="../assets/img/common/footer/sns/icon-fb-white.png"
+                    width="30"
+                    alt="facebook"
+                /></a>
+              </li>
+            </ul>
+          </section>
+          <section class="copyright">
+            <small>©2024 HASHIMOTO farming</small>
+          </section>
         </div>
-      </section>
-      <section class="footer-bottom">
-        <div class="container">
-          <div class="footer-bottom-row">
-            <div>
-              <img src="../assets/img/common/header/logo.svg" alt="logo" />
-            </div>
-            <div class="menu-list">
-              <ul>
-                <li>
-                  <a href="./index.html">ホーム</a>
-                </li>
-                <li>
-                  <a href="./about/index.html">橋本農場</a>
-                </li>
-                <li>
-                  <a href="#top-making">お米を作る工程</a>
-                </li>
-                <li>
-                  <a href="./shopping/index.html">お届けする商品</a>
-                </li>
-                <li>
-                  <a href="./contact/index.html">お問い合わせ</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <div class="copy">
-        <small>&copy; 2024 HASHIMOTO farming</small>
       </div>
     </footer>
   </body>
