fix footer issue in message page

--- a/contact/index.html
+++ b/contact/index.html
@@ -86,7 +86,7 @@
         </div>
       </nav>
     </header>
-    <main class="message-page">
+    <main>
       <section class="page-main">
         <div class="container">
           <div class="page-main-titles">
